fix of unexpected magnifying glass on iOS when intensed img is open

--- a/_app/assets/themes/curtana/_less/plugins.less
+++ b/_app/assets/themes/curtana/_less/plugins.less
@@ -17,6 +17,12 @@
   &.intense-open {
     cursor: zoom-out;
   }
+  
+  .intense-open {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+  }
 }
 
 // GitHub Gist
